--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="ccm edite.jpg" alt="imagem do colégio">
+        <img src="" alt="imagem do colégio">
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
