--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="" alt="imagem do colégio">
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="ccmedite.jpg" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-    </header>   
+    </header>
+
 </body>
 </html>
