--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-dois">Endereço: Av. Nossa Sra. Aparecida, s/n, Centro, Turvo  - PR, 85150-000  Telefone:(42) 3642-1210 </p>
         </div>
         <img class="escola-imagem" src="ccm edite.jpg" alt="colégio">
     </section>
