--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
        
     </div>
     </section>
-
+    <footer class="rodape">
+        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+    </footer>
 </body>
 </html>
